# Bark

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: PLUGIN_DESIGN.md
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs
plugins/archive-plugin/: Cargo.toml
plugins/archive-plugin/src/: archive.rs  main.rs
plugins/ascii-table/: Cargo.toml
plugins/ascii-table/src/: main.rs
plugins/calculator/: Cargo.toml
plugins/calculator/src/: main.rs
plugins/elf-viewer/: Cargo.toml
plugins/elf-viewer/src/: elf.rs  main.rs
plugins/ftp-plugin/: Cargo.toml
plugins/ftp-plugin/src/: ftp.rs  main.rs
plugins/hex-editor/: Cargo.toml
plugins/hex-editor/src/: main.rs
plugins/image-viewer/: Cargo.toml
plugins/image-viewer/src/: image_info.rs  main.rs
plugins/macho-viewer/: Cargo.toml
plugins/macho-viewer/src/: macho.rs  main.rs
plugins/notes/: Cargo.toml
plugins/notes/src/: main.rs
plugins/pdf-viewer/: Cargo.toml
plugins/pdf-viewer/src/: main.rs  pdf_info.rs
plugins/pe-viewer/: Cargo.toml
plugins/pe-viewer/src/: main.rs  pe.rs
plugins/plugin-api/src/: lib.rs
plugins/scripts/: system_status.py
plugins/stopwatch/: Cargo.toml
plugins/stopwatch/src/: main.rs
plugins/webdav-plugin/: Cargo.toml
plugins/webdav-plugin/src/: main.rs  webdav.rs
src/: config.rs  errors.rs  git.rs  history.rs  main.rs  panel_manager.rs  persistent_shell.rs  shell_handler.rs  terminal.rs  utils.rs  win_console.rs
src/async_io/: manager.rs  mod.rs
src/fs/: entry.rs  mod.rs  ops.rs  utils.rs
src/input/: mod.rs  normal.rs  text_field.rs  viewing.rs
src/input/dialogs/: archive_password.rs  confirm.rs  file_ops.rs  mod.rs  overlay.rs  owner.rs  permissions.rs  plugin.rs  scp.rs  shell.rs  source.rs  user_menu.rs  viewer_search.rs
src/plugins/: api.rs  manager.rs  mod.rs  overlay_script.rs  provider_api.rs  provider_script.rs  script.rs
src/providers/: local.rs  mod.rs  scp.rs
src/state/: app.rs  background.rs  command_state.rs  mod.rs  mode.rs  panel.rs  ui_state.rs
src/ui/: cp437.rs  dialog.rs  dialog_helpers.rs  help.rs  mod.rs  panel.rs  plugin_viewer.rs  shell.rs  spinner.rs  status.rs  theme.rs  viewer.rs  viewer_menu.rs  viewer_utils.rs
