[package]
name = "bark-pdf-viewer"
version = "0.1.0"
edition = "2024"
description = "PDF file viewer plugin for Bark file manager"
license = "MIT"

[[bin]]
name = "bark-pdf-viewer"
path = "src/main.rs"

[dependencies]
bark-plugin-api = { path = "../../plugin-api" }
lopdf = "0.34"
pdf-extract = "0.7"
