[package]
name = "bark-webdav-plugin"
version = "0.1.0"
edition = "2024"
description = "WebDAV/WebDAVS provider plugin for Bark file manager (external plugin)"
license = "MIT"

[[bin]]
name = "bark-webdav"
path = "src/main.rs"

[dependencies]
bark-plugin-api = { path = "../../plugin-api" }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
roxmltree = "0.20"
